# pyquantumforecaster

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: demo_sine.ipynb  plot_crypto_demo.py  quick_crypto_test.py  quick_test.py
src/pyquantumforecaster/: __init__.py  core.py  utils.py
