[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyquantumforecaster"
version = "0.1.0"
description = "Hybrid quantum-classical predictor for oscillatory time series using PennyLane"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pennylane>=0.40",
    "pennylane-lightning",
    "torch",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/Hal9000irl/pyquantumforecaster"
